# ohtuvarasto

./: .coverage  .coveragerc  .gitignore  .pylintrc  README.md  coverage.xml  huhhah.txt  id_ed25519  id_ed25519.pub  joj.txt  tiedosto1.txt  tiedosto2.txt
.github/workflows/: main.yml
osa3/hello-docker/: Dockerfile  hello.py
osa3/hello-robot/: log.html  output.xml  report.html
osa3/login-robot/index.py/: pyproject.toml
osa3/login-robot/src/services/: user_service.py
osa3/login-robot/src/tests/: login.robot  register.robot  resource.robot
osa3/oma-kontti/Palautusrepositorio-main/Palautusrepositorio-main/: Dockerfile
osa4/maksukortti-mock/src/: kassapaate.py
osa4/maksukortti-mock/src/tests/: kassapaate_test.py
