[project]
name = "index-py"
version = "0.1.0"
description = ""
authors = [
    {name = "Antti Vainikainen",email = "antti.e.vainikainen@student.jyu.fi"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "index", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
